# myMem0ry

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  PLANO_FASE3.md  PLANO_FASE4.md  Prompt.md  README.md  ROADMAP.md  main.py  memoria.meta.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.opencode/plans/: PLAN_FINETUNE.md  temporal-qa-pipeline.md
.serena/: project.yml
.serena/memories/: architecture-context-cascade.md  code-style.md  gotchas-and-config.md  hooks-and-spool.md  mcp-server-quirks.md  project-overview.md  retention-and-evolve.md  schema-and-enums.md  search-backends.md  testing.md
.sonarlint/: connectedMode.json
docker/: Dockerfile  docker-compose.yml
docs/: analise-fluxo-mcp.md  install.md  usage.md
hooks/claude-code/: mymem0ry-hook.sh  session-end.sh  session-start.sh
hooks/codex/: mymem0ry-hook.sh
hooks/cursor/: mymem0ry-hook.sh
hooks/gemini-cli/: mymem0ry-hook.sh
hooks/opencode/: mymem0ry-hook.sh
scripts/: build_dataset.py  export.py  quantize.py  train.py
src/mem0ry/: __init__.py  auth.py  config.py  daemon.py  mcp_server.py  web.py
src/mem0ry/cli/: _app.py  backup.py  conversation.py  diagnostics.py  handoff.py  hooks.py  main.py  memory.py  migration.py  retention.py  server.py  share.py
src/mem0ry/conversations/: __init__.py  ask.py  benchmark.py  embeddings.py  ffn_walk.py  query_expansion.py  search.py  search_bm25.py  search_fts.py  search_hybrid.py  spacy_expand.py  vector_store.py  writer.py
src/mem0ry/dataset/: __init__.py  builder.py  dedupe.py  filter.py  qa_cache.py  qa_generator.py  splitter.py  stats.py  temporal.py
src/mem0ry/db/: _helpers.py  connection.py  migrate.py  retention.py  schema.py  store.py  store_audit.py  store_handoffs.py  store_memories.py  store_observations.py
src/mem0ry/hooks/: router.py  sanitize.py
src/mem0ry/kvcache/: __init__.py  cache.py  extract.py  model.py
src/mem0ry/parsers/: base.py  claude.py  gemini.py  openai.py
src/mem0ry/pipeline/: dataset.py
src/mem0ry/training/: config.py  export.py  train.py
src/mem0ry/utils/: __init__.py  compress.py  filenames.py  git_context.py  logging.py  paths.py  update_check.py
src/mem0ry/web/: __init__.py  i18n.py  pages.py  templates.py
src/mymem0ry/: __init__.py
src/mymemory/: __init__.py  cli.py  config.py
src/mymemory/domain/: __init__.py  enums.py  errors.py  models.py
src/mymemory/sinks/: __init__.py  base.py  mem0_cloud.py  mem0_local.py
tests/: conftest.py  test_auth.py  test_backup_restore.py  test_benchmark.py  test_builder.py  test_cli_expand.py  test_cli_main.py  test_compression.py  test_config.py  test_dataset.py  test_db_connection.py  test_db_migrate.py  test_db_schema.py  test_db_store.py  test_domain_models.py  test_embeddings.py  test_evolution.py  test_export_import.py  test_filenames.py  test_git_context.py  test_handoffs.py  test_hook_router.py  test_mcp_server.py  test_mcp_tools.py  test_observability.py  test_observations.py  test_parsers_base.py  test_parsers_claude.py  test_parsers_gemini.py  test_parsers_openai.py  test_pipeline_dataset.py  test_retention.py  test_search.py  test_search_bm25.py  test_search_fts.py  test_search_full.py  test_search_hybrid.py  test_sinks.py  test_sonarqube_regression.py  test_spacy_expand.py  (+7 more)
