[project]
name = "mymem0ry"
version = "0.2.0"
description = "Personal memory search system with semantic query expansion"
readme = "README.md"
authors = [
    { name = "cccadet", email = "perestra.ccds@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "numpy>=2.4.4",
    "rank-bm25>=0.2.2",
    "spacy>=3.8",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]

[project.scripts]
mymem0ry = "mem0ry.cli.main:app"
mymem0ry-mcp = "mem0ry.mcp_server:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "mutmut>=2.5.0",
    "ruff>=0.15.9",
    "bandit>=1.7.0",
    "mypy>=1.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["mem0ry"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mutmut]
paths_to_mutate = ["src/mem0ry"]
tests_dir = ["tests"]
runner = "uv run pytest -x --tb=short -q"
do_not_mutate = ["test_*", "__init__.py"]
