[project]
name = "mymem0ry"
version = "0.24.0"
description = "Personal memory system for AI coding agents — offline, zero API keys, cross-agent handoffs, semantic search"
readme = "README.md"
license = "MIT"
authors = [
    { name = "cccadet", email = "perestra.ccds@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
"Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["memory", "mcp", "spacy", "semantic-search", "ai-agent", "claude-code", "opencode", "codex", "cross-agent", "handoff"]
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "numpy>=2.4.4",
    "rank-bm25>=0.2.2",
    "spacy>=3.8",
    "mcp[cli]>=1.0",
    "sqlite-vec>=0.1.9",
]

[project.urls]
Homepage = "https://github.com/cccadet/myMem0ry"
Documentation = "https://github.com/cccadet/myMem0ry#readme"
Repository = "https://github.com/cccadet/myMem0ry"
Issues = "https://github.com/cccadet/myMem0ry/issues"
Changelog = "https://github.com/cccadet/myMem0ry/blob/master/CHANGELOG.md"

[project.optional-dependencies]

[project.scripts]
mymem0ry = "mem0ry.cli.main:app"
mymem0ry-mcp = "mem0ry.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mem0ry"]

[tool.hatch.build.targets.wheel.force-include]
"hooks/" = "mem0ry/hooks/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "mutmut>=2.5.0",
    "ruff>=0.15.9",
    "bandit>=1.7.0",
    "mypy>=1.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["mem0ry"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mutmut]
paths_to_mutate = ["src/mem0ry"]
tests_dir = ["tests"]
runner = "uv run pytest -x --tb=short -q"
do_not_mutate = ["test_*", "__init__.py"]

[[tool.mypy.overrides]]
module = ["sqlite_vec", "rank_bm25", "spacy.*"]
ignore_missing_imports = true
